# afisha_bot

./: Cargo.toml  afisha.db  afisha.db-shm  afisha.db-wal
src/: api.rs  db.rs  main.rs
