[package]
name = "afisha_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5.0"
tokio = { version =  "1.8", features = ["full", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0.193"
serde_json = "1.0.108"
timer = "0.2.0"
chrono = { version = "0.4.31", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["sqlite", "runtime-tokio-native-tls", "chrono", "time"] }
chrono-tz = "0.8.4"
tokio-timer = "0.2.13"
calendar-duration = "1.0.0"
